@@ -569,18 +569,27 @@ public class EditPostSettingsFragment extends Fragment {
      * called by the activity when the user taps OK on a PostSettingsDialogFragment
      */
     public void onPostSettingsFragmentPositiveButtonClicked(@NonNull PostSettingsListDialogFragment fragment) {
+        int index;
+        PostStatus status = null;
         switch (fragment.getDialogType()) {
+            case HOMEPAGE_STATUS:
+                index = fragment.getCheckedIndex();
+                status = getHomepageStatusAtIndex(index);
+                break;
             case POST_STATUS:
-                int index = fragment.getCheckedIndex();
-                PostStatus status = getPostStatusAtIndex(index);
-                updatePostStatus(status);
-                PostAnalyticsUtilsKt.trackPostSettings(mAnalyticsTrackerWrapper, Stat.EDITOR_POST_VISIBILITY_CHANGED);
+                index = fragment.getCheckedIndex();
+                status = getPostStatusAtIndex(index);
                 break;
             case POST_FORMAT:
                 String formatName = fragment.getSelectedItem();
                 updatePostFormat(getPostFormatKeyFromName(formatName));
                 mAnalyticsTrackerWrapper.track(Stat.EDITOR_POST_FORMAT_CHANGED);
                 break;
+        }
+
+        if (status != null) {
+            updatePostStatus(status);
+            PostAnalyticsUtilsKt.trackPostSettings(mAnalyticsTrackerWrapper, Stat.EDITOR_POST_VISIBILITY_CHANGED);
         }
     }
 
@@ -589,11 +598,23 @@ public class EditPostSettingsFragment extends Fragment {
             return;
         }
 
-        int index = getCurrentPostStatusIndex();
+        boolean isSiteHomepage = isSiteHomepage();
+        int index = isSiteHomepage ? getCurrentHomepageStatusIndex() : getCurrentPostStatusIndex();
         FragmentManager fm = getActivity().getSupportFragmentManager();
+
+        DialogType statusType = isSiteHomepage ? DialogType.HOMEPAGE_STATUS : DialogType.POST_STATUS;
         PostSettingsListDialogFragment fragment =
-                PostSettingsListDialogFragment.newInstance(DialogType.POST_STATUS, index);
+                PostSettingsListDialogFragment.newInstance(statusType, index);
         fragment.show(fm, PostSettingsListDialogFragment.TAG);
+    }
+
+    private boolean isSiteHomepage() {
+        EditPostRepository postRepository = getEditPostRepository();
+        boolean isPage = postRepository.isPage();
+        boolean isPublishedPage = postRepository.getStatus() == PostStatus.PUBLISHED
+                                  || postRepository.getStatus() == PostStatus.PRIVATE;
+        boolean isHomepage = postRepository.getRemotePostId() == getSite().getPageOnFront();
+        return isPage && isPublishedPage && isHomepage;
     }
 
     private void showPostFormatDialog() {
@@ -893,6 +914,32 @@ public class EditPostSettingsFragment extends Fragment {
                 return 2;
             case PRIVATE:
                 return 3;
+            case TRASHED:
+            case UNKNOWN:
+            case PUBLISHED:
+            case SCHEDULED:
+                return 0;
+        }
+        return 0;
+    }
+
+    private PostStatus getHomepageStatusAtIndex(int index) {
+        switch (index) {
+            case 0:
+                return PostStatus.PUBLISHED;
+            case 1:
+                return PostStatus.PRIVATE;
+            default:
+                return PostStatus.UNKNOWN;
+        }
+    }
+
+    private int getCurrentHomepageStatusIndex() {
+        switch (getEditPostRepository().getStatus()) {
+            case PRIVATE:
+                return 1;
+            case DRAFT:
+            case PENDING:
             case TRASHED:
             case UNKNOWN:
             case PUBLISHED:
